complete content-01 section

--- a/app/partials/pages/landing-5/_about.njk
+++ b/app/partials/pages/landing-5/_about.njk
@@ -15,7 +15,7 @@
                         <h6 class="subtitle mb-10 text-primary">About This Course</h6>
                         <h2 class="titel">Learn To Build Complete Design System In 8 Weeks</h2>
                         <div class="about-section-05__content--list">
-                            <div class="content-list-01">
+                            <div class="content-list-03">
                                 <h6 class="short-title">What You Will Learn From This Course?</h6>
                                 <ul>
                                     <li>
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="about-section-05__content--widget-list">
-                            <div class="widget-list-01">
+                            <div class="about-wdidget-02">
                                 <h6 class="short-title">This Course Includes:</h6>
                                 <ul>
                                     <li>
