--- a/app/scss/components/_mixed.scss
+++ b/app/scss/components/_mixed.scss
@@ -139,3 +139,184 @@
         }
     }
 }
+.content-list-02{
+    .content-list-wrapper{
+        display: flex;
+        align-items: flex-start;
+        .list{
+            margin-right: 20px;
+            transform: translateY(-9px);
+            @include square(45px,500px);
+            @include flexAllCenter;
+            background: var(--bs-primary);
+            font-weight: 600;
+            color: white;
+            font-size: 18px;
+            @media (min-width:575px) {
+                font-size: 20px;
+                margin-right: 25px;
+            }
+            @media (min-width:992px) {
+                font-size: 24px;
+            }
+        }
+        .content{
+            h6{
+                font-weight: 600;
+                font-size: 18px;
+                margin-bottom: 20px;
+                color: var(--bs-dark);
+                line-height: 1.2;
+                @media (min-width:575px) {
+                    font-size: 20px;
+                }
+                @media (min-width:992px) {
+                    font-size: 24px;
+                }
+            }
+            p{
+                font-weight: 500;
+                color: var(--bs-gray);
+                line-height: 1.555555555555556;
+                font-size: 16px;
+                @media (min-width:575px) {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
+.content-list-03{
+    .short-title{
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 1.2;
+        padding: 0;
+        color: var(--bs-black);
+        margin-bottom: 20px;
+        @media (min-width:575px) {
+            font-size: 24px;
+            margin-bottom: 30px;
+        }
+    }
+    ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        li{
+            display: flex;
+            padding: 11px 0;
+            font-weight: 500;
+            margin: 0;
+            line-height: 1.2;
+            font-size: 16px;
+            color: var(--bs-gray);
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+            span{
+                margin-right: 12px;
+                display: inline-block;
+                svg{
+                    display: block;
+                }
+            }
+            &:last-child{
+                padding-bottom: 0;
+            }
+            &:first-child{
+                padding-top: 0;
+            }
+        }
+    }
+}
+.about-wdidget-02{
+    .short-title{
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 1.2;
+        padding: 0;
+        color: var(--bs-black);
+        margin-bottom: 10px;
+        @media (min-width:575px) {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    }
+    ul{
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat(2, minmax(1, 50%));
+        gap: 0px 40px;
+        padding: 0px;
+        overflow: hidden;
+        list-style: none;
+        @media (min-width:575px) {
+            grid-template-columns: repeat(2, minmax(0, 50%));
+        }
+        li{
+            display: flex;
+            padding: 11px 0;
+            font-weight: 500;
+            line-height: 1.2;
+            font-size: 16px;
+            color: var(--bs-gray);
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+            span{
+                margin-right: 12px;
+                display: inline-block;
+                svg{
+                    display: block;
+                }
+            }
+        }
+    }
+}
+.content-list-04{
+    display: flex;
+    align-items: flex-start;
+    .list{
+        @include square(45px,3px);
+        @include flexAllCenter;
+        background: var(--bs-solitude);
+        font-weight: 600;
+        color: var(--bs-primary);
+        font-size: 18px;
+        margin-right: 20px;
+        @media (min-width:575px) {
+            font-size: 20px;
+            margin-right: 25px;
+        }
+        @media (min-width:992px) {
+            margin-right: 30px;
+            font-size: 24px;
+        }
+    }
+    .content{
+        h6{
+            font-weight: 600;
+            font-size: 18px;
+            margin-bottom: 15px;
+            color: var(--bs-dark);
+            line-height: 1.2;
+            @media (min-width:575px) {
+                font-size: 20px;
+            }
+            @media (min-width:992px) {
+                font-size: 24px;
+            }
+        }
+        p{
+            font-weight: 500;
+            color: var(--bs-gray);
+            line-height: 1.555555555555556;
+            font-size: 16px;
+            @media (min-width:575px) {
+                font-size: 17px;
+            }
+        }
+    }
+}
