--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -776,3 +776,53 @@
     }
   }
 }
+.course-card{
+    background: #FFFFFF;
+    box-shadow: 0px 15px 30px rgba(210, 217, 224, 0.35);
+    border-radius: 5px;
+  &__top{
+    position: relative;
+    img{
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+    }
+    .video-btn{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  &__bottom{
+    padding: 30px 25px;
+    @media (min-width:992px) {
+      padding: 35px;
+    }
+    h6{
+      font-weight: 600;
+      line-height: 1.200333333333333;
+      font-size: 24px;
+      color: var(--bs-black);
+      padding-bottom: 15px;
+      @media (min-width:992px) {
+        font-size: 30px;
+        padding-bottom: 20px;
+      }
+    }
+    p{
+      color: var(--bs-gray);
+      font-weight: 500;
+      line-height: 1.555555555555556;
+      font-size: 16px;
+      @media (min-width:575px) {
+        font-size: 18px;
+      }
+    }
+    .btn{
+      margin-top: 30px;
+      @media (min-width:992px) {
+        margin-top: 45px;
+      }
+    }
+  }
+}
