--- a/app/scss/helpers/_spacings.scss
+++ b/app/scss/helpers/_spacings.scss
@@ -45,6 +45,20 @@
       }
   }
 }
+.faq-row {
+  margin-bottom: -24px;
+  @media (min-width:992px) {
+    margin-bottom: -35px;
+  }
+
+  [class^="col"] {
+    margin-bottom: 24px;
+    @media (min-width:992px) {
+      margin-bottom: 35px;
+
+    }
+  }
+}
 .mb-10{
   margin-bottom: 10px;
 }
