--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -846,3 +846,45 @@
     }
   }
 }
+.testimonial-card-05{
+  p{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.5;
+    @media (min-width:575px) {
+      font-size: 20px;
+    }
+    @media (min-width:1200px) {
+      font-size: 24px;
+    }
+  }
+  .author-info{
+    margin-top: 30px;
+    @media (min-width:992px) {
+      margin-top: 43px;
+    }
+    h6{
+      font-weight: 600;
+      padding-bottom: 5px;
+      font-size: 18px;
+      color: var(--bs-black);
+      line-height: 1.2;
+      @media (min-width:575px) {
+        padding-bottom: 10px;
+        font-size: 20px;
+      }
+      @media (min-width:992px) {
+        font-size: 24px;
+      }
+    }
+    p{
+      color: var(--bs-primary);
+      font-weight: 500;
+      line-height: 1.2;
+      font-size: 16px;
+      @media (min-width:575px) {
+        font-size: 18px;
+      }
+    }
+  }
+}
