--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/mixins" as *;
 .footer-section-01{
     background: var(--bs-black);
     padding: 60px 0;
@@ -367,6 +368,206 @@
         }
     }
 }
+.footer-section-04{
+    position: relative;
+    background: var(--bs-black);
+    padding: 82px 0 60px;
+    @media (min-width:575px) {
+        padding: 100px 0 80px;  
+    }
+    @media (min-width:992px) {
+        padding: 194px 0 130px;  
+    }
+    @media (min-width:1200px) {
+        padding-top: 206px; 
+    }
+    @media (min-width:1400px) {
+        padding-top: 254px; 
+    }
+    &__shape{
+        position: absolute;
+        top: -4px;
+        left: 0;
+        @media (min-width:575px) {
+            top: 0;
+        }
+    }
+    &__wrapper{
+        @media (min-width:480px) {
+            margin-bottom: 35px;
+        }
+        @media (min-width:992px) {
+            margin-bottom: 0px;
+        }
+        .logo{
+            margin-bottom: 19px;
+        }
+        .text{
+            p{
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.555555555555556;
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+            }
+        }
+        &--button-group{
+            margin-top: 10px;
+            @media (min-width:575px) {
+                margin-top: 20px;
+            }
+            ul{
+                margin: 0;
+                padding: 0;
+                list-style: none;
+                display: flex;
+                align-items: center;
+                margin: 0 -10px;
+                li{
+                    margin: 0 10px;
+                    a{
+                        display: block;
+                        @include square(36px,500px);
+                        @include flexAllCenter;
+                        transition: .3s;
+                        color: var(--bs-cadet-blue);
+                        border: 1px solid var(--bs-cadet-blue);
+                        &:hover{
+                            border-color: var(--bs-primary);
+                            color: var(--bs-white);
+                            background: var(--bs-primary);
+                        }
+                    }
+                }
+            }
+        }
+    }
+    &__widget{
+        h6{
+            font-weight: 600;
+            padding-bottom: 20px;
+            font-size: 20px;
+            line-height: 1.166666666666667;
+            color: var(--bs-white);
+            @media (min-width:992px) {
+                padding-bottom: 28px;
+                font-size: 24px;
+            }
+        }
+        ul{
+            li{
+                margin-bottom: 10px;
+                a{
+                    font-size: 16px;
+                    font-weight: 500;
+                    color: var(--bs-cadet-blue);
+                    transition: .3s;
+                    line-height: 1.555555555555556;
+                    @media (min-width:575px) {
+                        font-size: 18px;
+                    }
+                    &:hover{
+                        color: var(--bs-white);
+                    }
+                }
+                &:last-child{
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+    &__newsletter{
+        h6{
+            font-weight: 600;
+            padding-bottom: 16px;
+            font-size: 20px;
+            line-height: 1.166666666666667;
+            color: var(--bs-white);
+            @media (min-width:992px) {
+                padding-bottom: 28px;
+                font-size: 24px;
+            }
+        } 
+        p{
+            font-size: 16px;
+            font-weight: 500;
+            color: var(--bs-cadet-blue);
+            transition: .3s;
+            line-height: 1.555555555555556;
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+        }
+        &--form{
+            margin-top: 25px;
+            .form-group{
+                position: relative;
+                .form-control{
+                    background: rgba(255, 255, 255,0.1);
+                    font-size: 16px;
+                    padding-left: 60px;
+                    padding-right: 20px;
+                    font-weight: 500;
+                    color: white;
+                    transition: .3s;
+                    line-height: 1.555555555555556;
+                    &::placeholder{
+                        color: var(--bs-gray);
+                    }
+                    @media (min-width:575px) {
+                        font-size: 18px;
+                    }
+                }
+                .icon{
+                    position: absolute;
+                    top: 50%;
+                    left: 0;
+                    transform: translateY(-50%);
+                    img{
+                        display: block;
+                        margin-left: 25px;
+                    }
+                }
+            }
+            .btn{
+                margin-top: 15px;
+               &:hover{
+                   border-color: var(--bs-secondary);
+                   color: var(--bs-secondary);
+                   svg{
+                       path{
+                           fill: var(--bs-secondary);
+                           stroke: var(--bs-secondary);
+                       }
+                   }
+               } 
+            }
+        }
+    }
+    .widget-01{
+        @media (max-width:480px) {
+            margin: 35px 0;
+        }
+        @media (min-width:1200px) {
+           margin-left: 55px; 
+        }
+        @media (min-width:1400px) {
+           margin-left: 65px; 
+        }
+    }
+    .widget-02{
+        @media (max-width:480px) {
+            margin-bottom: 35px;
+        }
+        @media (min-width:1200px) {
+            margin-left: 65px;
+        }
+        @media (min-width:1400px) {
+            margin-left: 88px;
+        }
+    }
+}
 .copyright-block{
     background: var(--bs-black);
     &__wrapper{
@@ -450,5 +651,8 @@
                 }
             }
         }
+    }
+    &--modifi-03{
+        background: var(--bs-black);
     }
 }
