--- a/app/scss/pages/landing-4/_index.scss
+++ b/app/scss/pages/landing-4/_index.scss
@@ -5,7 +5,8 @@
 @forward "counter";
 @forward "content-01";
 @forward "content-02";
+@forward "testimonial-01";
 @forward "team";
-@forward "testimonial";
+@forward "testimonial-02";
 @forward "price";
 @forward "blog";
