--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -847,6 +847,82 @@
   }
 }
 .testimonial-card-05{
+  position: relative;
+  background: white;
+  box-shadow: 0px 8px 35px rgba(210, 217, 224, 0.2);
+  border-radius: 3px;
+  padding: 40px 25px;
+  z-index: 1;
+  @media (min-width:480px) {
+    padding: 50px;
+  }
+  &__content{
+    p{
+      color: var(--bs-black);
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.555555555555556;
+      @media (min-width:575px) {
+        font-size: 18px;
+      }
+    }
+    &--author{
+      display: flex;
+      align-items: center;
+      padding: 25px 0;
+      @media (min-width:992px) {
+        padding: 35px 0;
+      }
+      .avatar{
+        margin-right: 20px;
+        @include square(60px,3px);
+        img{
+          border-radius: 3px;
+        }
+      }
+      .avatar-info{
+        h6{
+          line-height: 1.2;
+          font-weight: 600;
+          font-size: 16px;
+          padding-bottom: 3px;
+          color: var(--bs-primary);
+          @media (min-width:575px) {
+            font-size: 18px;
+          }
+        }
+        p{
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 17px;
+          color: var(--bs-primary);
+          opacity: 0.6;
+        }
+      }
+    }
+  }
+  &__image{
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    .mask-img{
+      margin: 0;
+      mask-image: url(../../image/l-4/t-rectagle.png);
+      mask-repeat: no-repeat;
+      width: 100%;
+      height: 100%;
+      mask-position: right center;
+      mask-size: contain;
+    }
+    img{
+      object-fit: cover;
+    }
+  }
+}
+.testimonial-card-06{
   p{
     font-weight: 500;
     font-size: 18px;
