landing 3 testimonial fix

--- a/app/partials/pages/landing-3/_testimonial.njk
+++ b/app/partials/pages/landing-3/_testimonial.njk
@@ -1,10 +1,10 @@
 {% macro render(args) %}
    <div class="testimonial-section-03">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-xl-10">
                     <div class="row g-0">
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="testimonial-section-03__content bg-primary w-100 h-100">
                                 <div class="section-content">
                                     <h2 class="text-white font-size-30 text-center">What Our <br> Customers <br> Are Saying!</h2>
@@ -27,7 +27,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6">
                             <div class="testimonial-section-03__slider">
                                 <div class="testimonial-slider--03">
                                     <div class="single-slide">
@@ -104,7 +104,6 @@
                                                         </svg>
                                                   </div>
                                                   <p class="text-center text-dark">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly going variations of passages of Lorem Ipsum available
-                                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly going variations of passages of Lorem Ipsum available
                                                   </p>
                                               </div>
                                               <div class="testimonial-card-03__user">
