--- a/app/scss/pages/landing-3/_testimonial.scss
+++ b/app/scss/pages/landing-3/_testimonial.scss
@@ -18,16 +18,27 @@
            bottom: 15px;
            right: 15px;
        } 
+       .section-content{
+         @media (max-width:992px) {
+           padding: 100px 0;
+         }
+       }
     }
     &__slider{
-        position: relative;
+      @media (max-width:992px) {
+        margin-top: 30px;
+      }
         background: var(--bs-white-lilac);
+        padding: 40px 20px;
+        @media (min-width:480px) {
+          padding: 40px 30px;
+        }
         .testimonial-slider--03{
             &__nav{
-                position: absolute;
-                bottom: calc(100% - 75%);
-                left: 50%;
-                transform: translateX(-50%);
+              margin-top: 30px;
+              @media (min-width:575px) {
+                margin-top: 40px;
+              }
             }
         }
     }
@@ -84,15 +95,9 @@
 }
 .testimonial-card-03{
     &__content{
-      padding: 40px 25px;
-      transition: .3s;
-      z-index: 1;
-      @media (min-width:992px) {
-        padding: 40px 30px;
-      }
       .text{
         position: relative;
-        padding-bottom: 52px;
+        padding-bottom: 20px;
         p{
           font-weight: 500;
           font-size: 18px;
@@ -107,10 +112,6 @@
       }
     }
     &__user{
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
       &--ifom{
         h6{
           font-weight: 600;
