landing 6 setup and hero section complete

--- a/app/partials/components/Footer/_footer-03.njk
+++ b/app/partials/components/Footer/_footer-03.njk
@@ -1,5 +1,5 @@
 {% macro render(args) %}
-    <div class="footer-section-03 bg-white-lilac">
+    <div class="footer-section-03 bg-white-lilac footer-section-03--modifiar-01">
         <div class="container">
             <div class="row">
                 <div class="col-xl-4 col-lg-4 col-sm-6  col-xs-6">
