--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -184,6 +184,9 @@ button {
 .w-198{
   width: 198px !important;
 }
+.w-210{
+  width: 210px !important;
+}
 .video-btn{
   display: block;
   @include square(50px,500px);
