feature seciton complete

--- a/app/partials/components/cards.njk
+++ b/app/partials/components/cards.njk
@@ -84,7 +84,7 @@
 {% endmacro %}
 {% macro FeatureCard(obj) %}
     <div class="card feature-card {{obj.modifier}}">
-        <div class="card-img">
+        <div class="card-img {{obj.bgWrapper}}">
             <img src="{{obj.img}}" alt="feature" class="make-it-inline">
         </div>
         <div class="card-content">
