--- a/app/scss/helpers/_colors.scss
+++ b/app/scss/helpers/_colors.scss
@@ -34,6 +34,12 @@
 .bg-narvik{
   background: #EAF8F1 !important;
 }
+.bg-purple{
+  background: #7054FF !important;
+}
+.bg-yellow{
+  background: #FFAB2E !important;
+}
 .svg-purple{
   svg{
     path{
