work seciton complete

--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -509,6 +509,11 @@
         display: none;
       }
     }
+    &.bg-modifier{
+      .card-img{
+        background: transparent;
+      }
+    }
   }
   &--04{
     background: transparent;
