--- a/app/scss/pages/landing-6/_feature.scss
+++ b/app/scss/pages/landing-6/_feature.scss
@@ -9,7 +9,7 @@
     }
     &__image{
         margin-bottom: 35px;
-        @media (min-widht:992px) {
+        @media (min-width:992px) {
             margin-bottom: 0;
         }
         @media (min-width:1200px) {
