--- a/app/partials/pages/landing-6/_feature.njk
+++ b/app/partials/pages/landing-6/_feature.njk
@@ -36,9 +36,9 @@
     <div class="feature-section-04">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                <div class="col-lg-6 col-md-8">
+                <div class="col-lg-6 col-sm-9  col-10 col-md-8">
                     <div class="feature-section-04__image">
-                        <img src="./image/l-6/moble.png" alt="moble" class="w-100">
+                        <img src="./image/l-6/mobile.png" alt="moble" class="w-100">
                     </div>
                 </div>
                 <div class="col-lg-6">
