--- a/app/partials/pages/landing-6/_feature.njk
+++ b/app/partials/pages/landing-6/_feature.njk
@@ -48,7 +48,7 @@
                             <h2 class="titel">What Make’s Us Special</h2>
                         </div>
                         <div class="feature-section-04__content--card">
-                            <div class="row featre-card-bottom-two justify-content-center">
+                            <div class="row featre-card-bottom-two">
                                 {% for item in cardData%}
                                     <div class="col-xs-6 col-10" data-aos="fade-up" data-aos-delay="{{ 200 * item.id }}" data-aos-duration="1000">
                                             {{Card.FeatureCard({
