--- a/app/partials/pages/landing-6/_testimonial.njk
+++ b/app/partials/pages/landing-6/_testimonial.njk
@@ -14,12 +14,14 @@
                             <div class="slide">
                                 <div class="testimonial-card-07">
                                     <div class="row">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-5 col-xl-6">
                                             <div class="card-img">
-                                                <img src="./image/l-6/t-1.png" alt="testimoni" class="w-100">
+                                                <figure class="mask-img">
+                                                    <img src="./image/l-6/t-1.png" alt="testimoni" class="mw-100">
+                                                </figure>
                                             </div>
                                         </div>
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-6 offset-lg-1 col-xl-6 offset-xl-0">
                                             <div class="card-content">
                                                 <div class="icon">
                                                     <img src="./image/l-6/google.png" alt="google" class="mw-100">
@@ -36,7 +38,9 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="card-img">
-                                                <img src="./image/l-6/t-1.png" alt="testimoni" class="w-100">
+                                                <figure class="mask-img">
+                                                    <img src="./image/l-6/t-1.png" alt="testimoni" class="mw-100">
+                                                </figure>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
