inner header fix

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -187,6 +187,9 @@ button {
 .w-210{
   width: 210px !important;
 }
+.w-225{
+  width: 225px !important;
+}
 .video-btn{
   display: block;
   @include square(50px,500px);
