--- a/app/scss/components/_breadcrumb.scss
+++ b/app/scss/components/_breadcrumb.scss
@@ -1,29 +1,50 @@
 .breadcrumb{
     margin: 0;
-    background: rgb(230, 222, 209,0.5);
-    padding-top: 55px;
-    padding-bottom: 59px;
-    @media (min-width:768px) {
-        padding-top: 75px;
-        padding-bottom: 78px;
+    margin-bottom: 500px;
+    position: relative;
+    padding: 93px 0 80px;
+    border-bottom: 1px solid #DEE7EE;
+    @media (min-width:575px) {
+        padding: 110px 0 103px;
     }
-    .breadcrumb-text-block{
-        .breadcrumb--navigation{
-            padding-bottom: 10px;
-            font-weight: bold;
-            font-size: 16px;
-            line-height: 24px;
-        }
+    @media (min-width:992px) {
+      padding: 187px 0 150px;
     }
-    .title {
-        line-height: 1.181818181818182;
-        font-weight: 700;
-          font-size: 35px;
-        @media (min-width: 768px) {
-          font-size: 45px;
+    &__navigation{
+      position: absolute;
+      bottom: -26px;
+      left: 50%;
+      transform: translateX(-50%);
+      @media (min-width:575px) {
+        bottom: -27px;
+      }
+      &--text{
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding: 14px 20px;
+        border-radius: 30px;
+        background: white;
+        border: 1px solid #DEE7EE;
+        font-weight: 500;
+        line-height: 1.277777777777778;
+        font-size: 16px;
+        color: var(--bs-black);
+        span{
+          display: block;
+          color: var(--bs-gray);
         }
-        @media (min-width: 992px) {
-          font-size: 55px;
+        .dot{
+          margin: 0 10px;
+          width: 5px;
+          height: 5px;
+          background: var(--bs-primary);
+          border-radius: 500px;
+        }
+        @media (min-width:575px) {
+          font-size: 18px;
+          padding: 14px 30px;
         }
       }
+    }
 }
