--- a/app/scss/components/_mixed.scss
+++ b/app/scss/components/_mixed.scss
@@ -48,6 +48,55 @@
     }
   } 
 }
+.search-newsletter-01{
+    position: relative;
+    .form-group{
+        position: relative;
+        .form-control{
+            border-radius: 5px;
+            padding: 0;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.2;
+            height: 55px;
+            border: 0;
+            background: var(--bs-white-lilac);
+            padding: 0 20px 0 50px;
+            color: var(--bs-black);
+            @media (min-width:480px) {
+                font-size: 18px;
+                padding-left: 65px;
+                padding-right: 200px;
+
+            }
+            &::placeholder{
+                color: var(--bs-gray);
+            }
+        } 
+        .icon{
+            position: absolute;
+            top: 48%;
+            left: 20px;
+            transform: translateY(-50%);
+            @media (min-width:575px) {
+                left: 30px;
+            }
+        }
+    }
+    button{
+        width: 100%;
+        margin-top: 20px;
+        @media (min-width:480px) {
+        width: auto;
+        margin-top: 0px;
+        position: absolute;
+        top: 50%;
+        height: 100%;
+        right: 0;
+        transform: translateY(-50%);
+    }
+    } 
+}
 .content-list-01{
     ul{
         li{
