--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -1059,3 +1059,55 @@
     }
   }
 }
+.support-widget-card{
+  background: var(--bs-white-lilac);
+  display: flex;
+  transition: .3s;
+  border-radius: 5px;
+  align-items: center;
+  padding: 30px 25px;
+  text-align: center;
+  flex-direction: column;
+  @media (min-width:992px) {
+    text-align: start;
+    flex-direction: row;
+    padding: 30px;
+  }
+  @media (min-width:1200px) {
+    padding: 40px 30px 40px 40px;
+  }
+  .card-image{
+    @include square(114px,0);
+    @media (min-width:1200px) {
+      margin-right: 50px;
+    }
+  }
+  .card-body{
+    h4{
+      font-weight: 600;
+      line-height: 1.4;
+      font-size: 24px;
+      color: var(--bs-black);
+      padding-bottom: 10px;
+      @media (min-width:992px) {
+        font-size: 30px;
+        padding-bottom: 15px;
+      }
+    }
+    p{
+      color: var(--bs-gray);
+      font-weight: 500;
+      line-height: 1.555555555555556;
+      font-size: 16px;
+      padding-bottom: 20px;
+      @media (min-width:575px) {
+        padding-bottom: 25px;
+        font-size: 18px;
+      }
+    }
+  }
+  &:hover{
+    background: #FFFFFF;
+    box-shadow: 0px 8px 35px rgba(210, 217, 224, 0.35);
+  }
+}
