our blog 60% complete

--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -71,16 +71,10 @@
             </a>
             <ul class="sub-menu" id="submenu-11">
                 <li class="sub-menu--item">
-                    <a href="blog-1.html">Blog One</a>
+                    <a href="blog.html">Blog</a>
                 </li>
                 <li class="sub-menu--item">
-                    <a href="blog-2.html">Blog Two</a>
-                </li>
-                <li class="sub-menu--item">
-                    <a href="blog-details-1.html">Blog Details One</a>
-                </li>
-                <li class="sub-menu--item">
-                    <a href="blog-details-2.html">Blog Details Two</a>
+                    <a href="blog-details.html">Blog Details</a>
                 </li>
             </ul>
         </li>
