--- a/app/partials/components/Breadcrumb/_breadcrumb.njk
+++ b/app/partials/components/Breadcrumb/_breadcrumb.njk
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="{{'col-xl-6 col-lg-8 col-xs-10' if not option.column else option.column}}">
-                    <div class="page-title-block-two text-center">
+                    <div class="page-title-block-two breadcrumb__content text-center">
                         <h1 class="title">{{option.title}}</h1>
                         <p class="text-dark">{{option.text}}</p>
                     </div>
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="breadcrumb__navigation">
-            <p class="breadcrumb__navigation--text">Home<span class="dot"></span><span>{{option.pageName}}</span></p>
+            <p class="breadcrumb__navigation--text">Home<span class="dot"></span><span class="page-text">{{option.pageName}}</span></p>
         </div>
     </div>
 {% endmacro %}
