--- a/app/scss/components/_breadcrumb.scss
+++ b/app/scss/components/_breadcrumb.scss
@@ -9,6 +9,14 @@
     @media (min-width:992px) {
       padding: 187px 0 150px;
     }
+    &__content{
+      .title{
+        padding-bottom: 18px;
+        @media (min-width:992px) {
+          padding-bottom: 23px;
+        }
+      }
+    }
     &__navigation{
       position: absolute;
       bottom: -26px;
@@ -39,6 +47,9 @@
           height: 5px;
           background: var(--bs-primary);
           border-radius: 500px;
+        }
+        .page-text{
+          white-space: nowrap;
         }
         @media (min-width:575px) {
           font-size: 18px;
