--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -365,6 +365,82 @@
       }
     }
   }
+  &--03{
+    display: flex;
+    align-items: center;
+    padding: 25px 20px;
+    @media (min-width:480px) {
+      padding: 25px;
+    }
+    flex-direction: column;
+    @media (min-width:768px) {
+      flex-direction: row;
+    }
+    .card-image{
+      margin-bottom: 35px;
+      @media (min-width:768px) {
+        @include size(270px,250px);
+        margin-right: 30px;
+        margin-bottom: 0;
+      }
+      @media (min-width:992px) {
+        margin-right: 35px;
+        @include size(320px,270px);
+      }
+      border-radius: 3px;
+      img{
+        @media (max-width:768px) {
+          width: 100%;
+        }
+        object-fit: cover;
+        border-radius: 3px;
+      }
+    }
+    .card-body{
+      padding: 0;
+      .meta{
+        display: flex;
+        align-items: center;
+        span{
+          display: flex;
+          align-items: center;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 1.277777777777778;
+          @media (min-width:575px) {
+            font-size: 18px;
+          }
+          img{
+            margin-right: 10px;
+          }
+        }
+        &__date{
+          margin-right: 5px;
+          @media (min-width:480px) {
+            margin-right: 38px;
+          }
+        }
+      }
+      .titel{
+        margin: 0;
+        padding-bottom: 15px;
+        padding-top: 20px;
+        @media (min-width:992px) {
+          padding-bottom: 20px;
+          padding-top: 25px;
+
+        }
+      }
+      .text{
+        font-weight: 500;
+        line-height: 1.555555555555556;
+        font-size: 16px;
+        @media (min-width:575px) {
+          font-size: 18px;
+        }
+      }
+    }
+  }
 }
 .portfolio-card{
   overflow: hidden;
