--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -187,6 +187,12 @@ div#loading img {
     &-right {
       .menu-block {
         margin-left: auto;
+        @media (min-width:992px) {
+          margin-right: 30px;
+        }
+        @media (min-width:1200px) {
+          margin-right: 40px;
+        }
       }
 
       > .container-fluid {
