--- a/app/partials/components/cards.njk
+++ b/app/partials/components/cards.njk
@@ -131,3 +131,32 @@
         </div>
     </div>
 {% endmacro %}
+{% macro PostCard(obj) %}
+  <div class="card-post">
+    <div class="post-img">
+      <img src="{{obj.img}}" alt="card-img">
+    </div>
+      <div class="post-content">
+        <div class="meta">
+            <span>{{obj.date | safe}}</span>
+        </div>
+          <h6 class="post-title">{{obj.title}}</h6>
+      </div>
+  </div>
+{% endmacro %}
+{% macro InstagramShots(obj) %}
+  <div class="card-shots">
+    <div class="shots-img">
+      <img src="{{obj.img}}" alt="card-img">
+      <div class="shots-img__icon">
+        
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17 2H7C4.23858 2 2 4.23858 2 7V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V7C22 4.23858 19.7614 2 17 2Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M16.0002 11.3703C16.1236 12.2025 15.9815 13.0525 15.594 13.7993C15.2065 14.5461 14.5933 15.1517 13.8418 15.53C13.0903 15.9082 12.2386 16.0399 11.408 15.9062C10.5773 15.7726 9.80996 15.3804 9.21503 14.7855C8.62011 14.1905 8.22793 13.4232 8.09426 12.5925C7.9606 11.7619 8.09226 10.9102 8.47052 10.1587C8.84878 9.40716 9.45438 8.79404 10.2012 8.40654C10.948 8.01904 11.7979 7.87689 12.6302 8.0003C13.4791 8.12619 14.265 8.52176 14.8719 9.12861C15.4787 9.73545 15.8743 10.5214 16.0002 11.3703Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M17.5 6.5H17.51" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+
+      </div>
+    </div>
+  </div>
+{% endmacro %}
