--- a/app/scss/helpers/_typography.scss
+++ b/app/scss/helpers/_typography.scss
@@ -96,6 +96,14 @@
     }
   }
 }
+.content-title{
+  font-weight: 600;
+  stroke-linejoin: 1.302916666666667;
+  font-size: 18px;
+  @media (min-width:575px) {
+      font-size: 24px;
+  }
+}
 
 .font-size-30{
   font-size: 24px;
